# poncascope

./: .gitmodules  CMakeLists.txt  CMakeLists_old.txt  README.md
assets/: 0_0006.xyz  crixxi_25000.pts  goursat-25000.pts  goursat-hole_10000.pts  goursat_10000.pts  torus_10000.pts
assets/cad/: 0001.pts  0002.pts  0003.pts  0006.pts  1023.pts
assets/cad_helios/: 00000002.txt  00000004.pts  00000004.txt  00000006.pts  00000008.pts  00000022.txt  00000027.txt  00000030.txt  00000049.txt  00000050.pts
assets/implicit/: cylinder_25000.pts  ellipsoid_25000.pts  goursat-hole_25000.pts  goursat_25000.pts  hyperboloid_25000.pts  paraboloid_25000.pts  selle_25000.pts  torus_25000.pts  tube_25000.pts
cmake/: config.cmake
cmake/recipes/: DGtal.cmake  boost.cmake  ccache.cmake  clang-format.cmake  libigl.cmake  nanoflann.cmake  polyscope.cmake  ponca.cmake
scripts/: compute_images.sh  compute_images_neighbors.sh  compute_implicit_noisy.sh  compute_simple_images.sh
scripts/camera_settings/: camera00000030.json  camera00000050.json  camera0001.json  camera0002.json  camera0003.json  camera0006.json  camera1023.json  cameraSettings_0001.json  cameraSettings_0001ABC.json  cameraSettings_0003.json  cameraSettings_0034ABC.json  cameraSettings_1023.json  cameraSettings_armadillo1.json  cameraSettings_armadillo2.json  cameraSettings_goursat-hole.json  cameraSettings_goursat.json  cameraSettings_torus.json  cameracylinder_25000.json  cameraellipsoid_25000.json  cameragoursat-hole_25000.json  cameragoursat_25000.json  camerahyperboloid_25000.json  cameraparaboloid_25000.json  cameraselle_25000.json  cameratorus_25000.json  cameratube_25000.json
src/: CMakeLists.txt  CloudGeneration.h  GUI.cpp  GUI.h  GUI.hpp  MyPointCloud.h  PointProcessing.h  PointProcessing.hpp  defines.h  definitions.h  generators.hpp  imgui_filedialog.cpp  imgui_filedialog.h  imgui_filedialog.hpp  main.cpp  polyscopeSlicer.hpp  poncaAdapters.hpp  poncascope.cpp
src/GUI/: GUI.cpp  GUI.h
src/IO/: CloudGeneration.h  PointCloudDiff.h  Readers.h  Writters.h
src/VoxelGrid/: Voxel.h  VoxelGrid.h  iVoxel.h  voxelGridAdapter.h
src/mlods/: mlods.h  mlods.hpp  mlodsTraits.h  mlodsWeightFunc.h
src/mlods/Query/: mlodsQuery.h  mlodsRangeQuery.h  queryExtend.h
src/ndtree/: ndtree.h  ndtree.hpp  ndtreeTraits.h
src/ndtree/Iterator/: ndtreeKNearestIterator.h  ndtreeNearestIterator.h  ndtreeRangeIterator.h
src/ndtree/Query/: ndtreeNearestQueries.h  ndtreeQuery.h  ndtreeRangeQueries.h
src/ponca_estimators/: README.md  estimators.h
src/ponca_estimators/adapters/: DifferentialQuantities.hpp  Estimator.h  EstimatorFactory.h  declarations.h  fitDefinitions.h  poncaAdapters.hpp  types.h
